--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"homepage":"https//amaljithrenjith.github.io/demo_news/",
+"homepage":"https//amaljithrenjith.github.io/demo_news",
 "name":"news",
 "version":"0.1.0",
 "private":true,
